--- a/sass/components/modal-windov/_modal-btn.scss
+++ b/sass/components/modal-windov/_modal-btn.scss
@@ -19,18 +19,20 @@
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
 }
+
 
 .button-back-img {
     display: block;
     fill: currentColor;
     transition-property: fill;
-}
-
-.button-back:hover,
-.button-back:focus {
-    color: var(--accent-color);
-
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
