--- a/sass/layout/section-footer/_footer-logo.scss
+++ b/sass/layout/section-footer/_footer-logo.scss
@@ -9,11 +9,11 @@
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.logo-footer:hover,
-.logo-footer:focus {
-    transform: scale(1.5);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        transform: scale(1.5);
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
