--- a/sass/base/_containeer.scss
+++ b/sass/base/_containeer.scss
@@ -4,6 +4,13 @@
     padding: 0 15px;
 }
 
+.page-header {
+    background-color: var(--color-white);
+    border-bottom: 1px solid #ececec;
+
+    padding: 0;
+}
+
 .head-box {
     display: flex;
     align-items: center;
@@ -19,4 +26,8 @@
     display: flex;
     align-items: baseline;
 }
+
+
+
+
 
