--- a/sass/components/modal-windov/_modal-form.scss
+++ b/sass/components/modal-windov/_modal-form.scss
@@ -1,19 +1,3 @@
-.modal-title-txt {
-    text-align: center;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-    margin-bottom: 12px;
-}
-
-.modal-form-box {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
 .label-for-modal {
     pointer-events: none;
@@ -147,12 +131,11 @@
     border: 2px solid var(--accent-color);
 }
 
-/* test */
+
 .daw-frame:hover+.checked-box {
     border: 2px solid var(--color-black);
 }
 
-/* test */
 
 .daw-frame:focus:checked:focus+.checked-box {
     border: 2px solid var(--accent-color);
@@ -167,16 +150,16 @@
     line-height: 1.7;
     text-decoration: none;
     color: var(--accent-color);
-}
 
-.contract-info:after {
-    position: absolute;
-    content: "";
-    right: 0;
-    bottom: 0.34em;
-    width: 112px;
-    height: 1px;
-    background-color: var(--accent-color);
+    &:after {
+        position: absolute;
+        content: "";
+        right: 0;
+        bottom: 0.34em;
+        width: 112px;
+        height: 1px;
+        background-color: var(--accent-color);
+    }
 }
 
 .send-button {
@@ -194,14 +177,15 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.send-button:hover,
-.send-button:focus,
-.send-button:active {
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus,
+    &:active {
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    background-color: #188ce8;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        background-color: #188ce8;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
+
 }
