--- a/sass/components/modal-windov/_modal.scss
+++ b/sass/components/modal-windov/_modal.scss
@@ -15,4 +15,21 @@
 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
+
+    &-title-txt {
+        text-align: center;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        letter-spacing: 0.03em;
+        color: var(--title-text-color);
+        margin-bottom: 12px;
+    }
+
+    &-form-box {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
