--- a/sass/layout/_section-about-us.scss
+++ b/sass/layout/_section-about-us.scss
@@ -5,20 +5,21 @@
     justify-content: center;
 }
 
-.about-us {
-    line-height: 1.14;
-    text-transform: uppercase;
-    font-size: 14px;
-}
-
-.about-us-txt {
-    margin-top: 10px;
-
-    line-height: 1.7;
-}
-
 .about {
     padding-bottom: 0;
+
+    &-us {
+        line-height: 1.14;
+        text-transform: uppercase;
+        font-size: 14px;
+
+        &-txt {
+            margin-top: 10px;
+
+            line-height: 1.7;
+        }
+
+    }
 }
 
 .content-box {
