--- a/sass/layout/_section-w-d-w-d.scss
+++ b/sass/layout/_section-w-d-w-d.scss
@@ -12,11 +12,11 @@
     max-width: 370px;
     max-height: 294px;
     margin: 15px;
-}
 
-.image-last {
-    max-width: 370px;
-    max-height: 294px;
+    &-last {
+        max-width: 370px;
+        max-height: 294px;
+    }
 }
 
 .section-title {
@@ -25,7 +25,6 @@
     text-align: center;
 }
 
-/* what-do-we-do */
 .what-do-we-do {
     position: absolute;
 
@@ -44,14 +43,14 @@
     left: 0;
 
     background-color: rgba(47, 48, 58, 0.8);
-}
 
-.what-do-we-do-text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--color-white);
+    &-text {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--color-white);
+    }
 }
