--- a/sass/layout/portfolio/_portfolio-cards.scss
+++ b/sass/layout/portfolio/_portfolio-cards.scss
@@ -21,12 +21,12 @@
 .work-list {
     width: 1200px;
     padding: 0 15px;
-}
 
-.work-list-pozition {
-    display: flex;
-    flex-wrap: wrap;
-    margin: -15px;
+    &-pozition {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
 }
 
 .work-elements {
@@ -36,49 +36,47 @@
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.work-elements:hover {
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+    &:hover {
+        cursor: pointer;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 
-.work-elements:hover .work-elements-hover-text {
-    transform: translateY(0);
+    &:hover .work-elements-hover-text {
+        transform: translateY(0);
+    }
+
 }
 
 .work-elements-hover {
     overflow: hidden;
     position: relative;
+
+    &-text {
+        margin-top: 2px;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        padding: 63px 24px;
+        font-size: 18px;
+        line-height: 1.56;
+        letter-spacing: 0.03em;
+
+        background-color: rgba(33, 150, 243, 0.9);
+        color: var(--color-white);
+        transition-property: transform;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(100%);
+    }
 }
 
-.work-elements-hover-text {
-    margin-top: 2px;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    padding: 63px 24px;
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-
-    background-color: rgba(33, 150, 243, 0.9);
-    color: var(--color-white);
-    transition-property: transform;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(100%);
-}
-
-.work-elements:hover {
-    cursor: pointer;
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 
 .decoration-work-lilt {
     border-left: 1px solid var(--decoration-work-list);
