--- a/sass/layout/portfolio/portfolio-btn.scss
+++ b/sass/layout/portfolio/portfolio-btn.scss
@@ -4,6 +4,12 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 8px;
+
+    &:focus,
+    &:focus:hover {
+        background-color: var(--accent-color);
+        color: var(--color-white);
+    }
 }
 
 .list-of-buttons {
@@ -23,6 +29,15 @@
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        color: var(--color-white);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+        border-radius: 4px;
+    }
 }
 
 .list-of-buttons.current {
@@ -33,17 +48,3 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-of-buttons:hover,
-.list-of-buttons:focus {
-    background-color: var(--accent-color);
-    color: var(--color-white);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-}
-
-.buttons:focus,
-.buttons:focus:hover {
-    background-color: var(--accent-color);
-    color: var(--color-white);
-}
