--- a/sass/layout/section-footer/_footer-join.scss
+++ b/sass/layout/section-footer/_footer-join.scss
@@ -18,17 +18,6 @@
     padding-top: 20px;
 }
 
-.social-buttons-footer {
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    fill: var(--color-white);
-    background-color: rgba(255, 255, 255, 0.1);
-
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .social-pozition-footer {
     margin: 12px;
     width: 20px;
@@ -39,12 +28,23 @@
     color: var(--color-white);
 }
 
-.social-buttons-footer:hover,
-.social-buttons-footer:focus {
-    background-color: var(--accent-color);
+.social-buttons-footer {
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
     fill: var(--color-white);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    background-color: rgba(255, 255, 255, 0.1);
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        fill: var(--color-white);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
