--- a/sass/layout/section-header/_header-contact.scss
+++ b/sass/layout/section-header/_header-contact.scss
@@ -21,24 +21,24 @@
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.contact-link:hover,
-.contact-link:focus {
-    color: var(--accent-color);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
 
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
 }
 
 .nav-item {
     display: flex;
     align-items: center;
-}
 
-.nav-item:hover,
-.nav-item:focus {
-    color: var(--accent-color);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 
 .envelope {
