--- a/sass/layout/section-header/_header-navigation.scss
+++ b/sass/layout/section-header/_header-navigation.scss
@@ -15,23 +15,24 @@
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.link::before {
-    content: "";
-    position: absolute;
-    right: 0;
-    bottom: -1px;
-    height: 4px;
-    width: 0;
-    background-color: var(--accent-color);
-    border-radius: 2px;
+    &::before {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: -1px;
+        height: 4px;
+        width: 0;
+        background-color: var(--accent-color);
+        border-radius: 2px;
 
-    animation-name: animation-underline-none;
-    animation-duration: 250ms;
-    animation-direction: alternate;
-    animation-fill-mode: forwards;
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        animation-name: animation-underline-none;
+        animation-duration: 250ms;
+        animation-direction: alternate;
+        animation-fill-mode: forwards;
+        animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
 }
 
 .link::after {
@@ -61,7 +62,8 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link.current::before {
+.link.current::before,
+.link.current::after {
     content: "";
 
     position: absolute;
@@ -78,43 +80,22 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link.current::after {
-    content: "";
-
-    position: absolute;
-    left: 0;
-    bottom: 0;
-
-    display: block;
-    width: 100%;
-    height: 4px;
-
-    background-color: var(--accent-color);
-    border-radius: 2px;
-
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.site-nav .link.current {
-    color: var(--accent-color);
-}
-
 .site-nav {
     margin-left: 93px;
     display: flex;
+
+    &:focus {
+        background-color: var(--color-white);
+        color: var(--accent-color);
+    }
+
+    &:hover {
+        color: var(--accent-color);
+    }
 }
 
 .site-nav .nav-item:not(:last-child) {
     margin-right: 50px;
-}
-
-.site-nav :focus {
-    background-color: var(--color-white);
-    color: var(--accent-color);
-}
-
-.site-nav :hover {
-    color: var(--accent-color);
 }
 
 .current {
