--- a/sass/layout/section-team/social-team.scss
+++ b/sass/layout/section-team/social-team.scss
@@ -10,17 +10,16 @@
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.social-buttons:focus,
-.social-buttons:hover {
+    
+    &:focus,
+&:hover {
     background-color: var(--accent-color);
     fill: var(--color-white);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 }
 
 .social-pozition {
