--- a/css/main.css
+++ b/css/main.css
@@ -73,11 +73,6 @@ ul {
   padding: 0;
 }
 
-.head-box {
-  display: flex;
-  align-items: center;
-}
-
 .footer {
   padding: 60px 0;
   background: var(--primary-section-fon);
@@ -116,7 +111,9 @@ ul {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.logo-left {
+
+.page-header__logo,
+.page-footer__logo {
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -129,12 +126,12 @@ ul {
   align-items: center;
 }
 
-.head-nav {
+.page-header__navigation {
   display: flex;
   align-items: center;
 }
 
-.link {
+.navigation__link {
   display: block;
   position: relative;
   color: var(--title-text-color);
@@ -149,7 +146,7 @@ ul {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.link::before {
+.navigation__link::before {
   content: "";
   position: absolute;
   right: 0;
@@ -165,7 +162,7 @@ ul {
   animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link::after {
+.navigation__link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -179,18 +176,18 @@ ul {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover::after {
+.navigation__link:hover::after {
   transform: scaleX(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:focus::after {
+.navigation__link:focus::after {
   transform: scaleX(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link.current::before,
-.link.current::after {
+.navigation__link.current::before,
+.navigation__link.current::after {
   content: "";
   position: absolute;
   left: 0;
@@ -203,19 +200,19 @@ ul {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav {
+.navigation__list {
   margin-left: 93px;
   display: flex;
 }
-.site-nav:focus {
+.navigation__list:focus {
   background-color: var(--color-white);
   color: var(--accent-color);
 }
-.site-nav:hover {
+.navigation__list:hover {
   color: var(--accent-color);
 }
 
-.site-nav .nav-item:not(:last-child) {
+.navigation__list .navigation__item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -226,16 +223,20 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.auth-nav .nav-item + .nav-item {
+.contact .navigation__item + .navigation__item {
   margin-left: 50px;
 }
 
-.auth-nav {
+.contact .contact__item + .contact__item {
+  margin-left: 50px;
+}
+
+.contact {
   display: flex;
   margin-left: auto;
 }
 
-.contact-link {
+.contact__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -248,17 +249,19 @@ ul {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-link:hover, .contact-link:focus {
+.contact__link:hover, .contact__link:focus {
   color: var(--accent-color);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.nav-item {
+.navigation__item {
   display: flex;
   align-items: center;
 }
-.nav-item:hover, .nav-item:focus {
+
+.navigation__item:hover,
+.navigation__item:focus {
   color: var(--accent-color);
 }
 
@@ -324,33 +327,35 @@ ul {
   background-repeat: no-repeat;
 }
 
-.about-us-list {
+.about-us {
+  padding-bottom: 0;
+}
+
+.about-us__list {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
 }
 
-.about {
-  padding-bottom: 0;
-}
-.about-us {
+.about-us__title {
   line-height: 1.14;
   text-transform: uppercase;
   font-size: 14px;
 }
-.about-us-txt {
+
+.about-us__text {
   margin-top: 10px;
   line-height: 1.7;
 }
 
-.content-box {
+.about-us__box {
   max-width: 270px;
   display: flex;
   flex-direction: column;
 }
 
-.svg-about-us {
+.about-us__backraund {
   width: 270px;
   height: 120px;
   background-color: var(--decoration-background);
@@ -358,7 +363,7 @@ ul {
   border-radius: 4px;
 }
 
-.icon-about-us {
+.about-us__icon {
   margin: 25px 100px;
 }
 
