--- a/sass/layout/section-header/_header-logo.scss
+++ b/sass/layout/section-header/_header-logo.scss
@@ -16,13 +16,15 @@
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
 
-    &-left {
-        color: var(--accent-color);
-        font-family: Raleway, sans-serif;
-        font-weight: 700;
-        font-size: 26px;
-        line-height: 1.19;
-    }
+}
+
+.page-header__logo,
+.page-footer__logo {
+    color: var(--accent-color);
+    font-family: Raleway, sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
 }
 
 .head-box {
@@ -30,7 +32,7 @@
     align-items: center;
 }
 
-.head-nav {
+.page-header__navigation {
     display: flex;
     align-items: center;
 }
