--- a/sass/layout/section-header/_header-navigation.scss
+++ b/sass/layout/section-header/_header-navigation.scss
@@ -1,4 +1,4 @@
-.link {
+.navigation__link {
     display: block;
     position: relative;
 
@@ -35,7 +35,7 @@
 
 }
 
-.link::after {
+.navigation__link::after {
     content: "";
 
     position: absolute;
@@ -52,18 +52,18 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover::after {
+.navigation__link:hover::after {
     transform: scaleX(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:focus::after {
+.navigation__link:focus::after {
     transform: scaleX(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link.current::before,
-.link.current::after {
+.navigation__link.current::before,
+.navigation__link.current::after {
     content: "";
 
     position: absolute;
@@ -80,7 +80,7 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav {
+.navigation__list {
     margin-left: 93px;
     display: flex;
 
@@ -94,7 +94,7 @@
     }
 }
 
-.site-nav .nav-item:not(:last-child) {
+.navigation__list .navigation__item:not(:last-child) {
     margin-right: 50px;
 }
 
