--- a/sass/layout/section-header/_header-contact.scss
+++ b/sass/layout/section-header/_header-contact.scss
@@ -45,7 +45,7 @@
     color: var(--accent-color);
 }
 
-.envelope {
+.contact__envelope {
     width: 16px;
     height: 12px;
 
@@ -53,7 +53,7 @@
     fill: currentColor;
 }
 
-.smartphone {
+.contact__smartphone {
     width: 10px;
     height: 16px;
 
