--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,8 @@ ul {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.page-header__logo,
-.page-footer__logo {
+.header__logo,
+.footer__logo {
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
