--- a/sass/layout/section-header/_header-logo.scss
+++ b/sass/layout/section-header/_header-logo.scss
@@ -18,8 +18,8 @@
 
 }
 
-.page-header__logo,
-.page-footer__logo {
+.header__logo,
+.footer__logo {
     color: var(--accent-color);
     font-family: Raleway, sans-serif;
     font-weight: 700;
