--- a/sass/layout/section-header/_header-navigation.scss
+++ b/sass/layout/section-header/_header-navigation.scss
@@ -52,6 +52,7 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .navigation__link:hover::after {
     transform: scaleX(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -80,6 +81,11 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.navigation__link:hover,
+.navigation__link:focus {
+    color: var(--accent-color);
+}
+
 .navigation__list {
     margin-left: 93px;
     display: flex;
@@ -104,3 +110,4 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
