--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,11 @@ ul {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.navigation__link:hover,
+.navigation__link:focus {
+  color: var(--accent-color);
+}
+
 .navigation__list {
   margin-left: 93px;
   display: flex;
