--- a/sass/base/_containeer.scss
+++ b/sass/base/_containeer.scss
@@ -1,7 +1,16 @@
+
+
 .container {
-    max-width: 1200px;
     margin: 0 auto;
+    width: 480;
     padding: 0 15px;
+
+
+    @media screen and (min-width: 1200px) {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
 }
 
 .page-header {
